MMT-310: Fix header spacing on provider summary page

--- a/app/assets/stylesheets/modules/_masthead.scss
+++ b/app/assets/stylesheets/modules/_masthead.scss
@@ -28,7 +28,6 @@ main.content {
 }
 
 .heading-group {
-  margin-top: 2em;
   margin-bottom: 2em;
   padding: 0.5em 1em;
   border-left: 5px solid $red;
